# eccsi

./: Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac  setenv.sh
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
lib/: Makefile.am  Makefile.in
lib/data/: communityParameters.c  mikeySakkeParameters.c  userParameters.c
lib/eccsi/: eccsi.c
lib/esprng/: esprng.c
lib/msdb/: msdb.c
lib/sakke/: sakke.c
lib/utils/: utils.c
resource/lib/: libevent_core-2.1.so.6  libevent_extra-2.1.so.6  libevent_pthreads-2.1.so.6
src/: Makefile.am  Makefile.in  es_demo_1.c  es_demo_2.c
